--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,11 @@
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/fd23
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
