--- a/application-dev.properties
+++ b/application-dev.properties
@@ -5,5 +5,7 @@ spring.datasource.password=cjc
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 
 config.profile.name=dev-profile
+
